# Reps

./: .gitignore  AGENT.md  README.md  alembic.ini  docker-compose.yml  eslint.config.js  main.py  package-lock.json  package.json  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 001_create_users_and_sessions.py  002_mvp1_coaching_tables.py  003_mvp1_coaching_indexes.py  004_mvp2_training_tables.py  005_mvp21_training_text_fields.py  006_mvp22_agent_sessions.py  (+5 more)
frontend/: index.html  package-lock.json  package.json
scripts/: cleanup_agent_sessions.py  seed_admin.py
tasks/: MVP0-001-project-setup.md  MVP0-002-data-ingestion.md  MVP0-003-indexing.md  MVP0-004-search.md  MVP0-005-ui.md  MVP1-001-project-setup.md  MVP1-002-data-ingestion.md  MVP1-003-indexing.md  MVP1-004-search.md  MVP1-005-ui.md  MVP2-001-project-setup.md  MVP2-002-data-ingestion.md  MVP2-003-indexing.md  MVP2-004-search.md  MVP2-005-ui.md  MVP2.1-001-project-setup.md  MVP2.1-002-data-ingestion.md  MVP2.1-003-indexing.md  MVP2.1-004-search.md  MVP2.1-005-ui.md  MVP2.2-001-project-setup.md  MVP2.2-002-data-ingestion.md  MVP2.2-003-indexing.md  MVP2.2-004-search.md  MVP2.2-005-ui.md  MVP3-001-project-setup.md  MVP3-002-data-ingestion.md  MVP3-003-indexing.md  MVP3-004-search.md  MVP3-005-ui.md  MVP4-000-conversations-backend.md  MVP4-001-design-system.md  MVP4-002-auth-ui.md  MVP4-003-athlete-shell.md  MVP4-004-athlete-screens.md  MVP4-005-coach-shell.md  MVP4-006-coach-athlete-training.md  MVP4-007-chat-ai-modals.md  MVP4-008-polish-qa.md  mvp-0.md  (+7 more)
tests/: conftest.py
(+356 files in other folders)
