[project]
name = "reps"
version = "0.1.0"
description = "Пишем чистый код"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.115",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28",
    "mypy>=1.14",
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/domain", "src/application", "src/infrastructure", "src/interfaces"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "integration: tests that require PostgreSQL",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
mypy_path = "src:tests"
explicit_package_bases = true
namespace_packages = true
warn_unused_configs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true
